test/resources/valid/com/boothj5/jarchexample/application/common/StringUtil.java
package com.boothj5.jarchexample.application.common;

import java.util.List;