test/resources/invalid/com/boothj5/jarchexample/application/common/StringUtil.java
package com.boothj5.jarchexample.application.common;

import java.util.List;

import com.boothj5.jarchexample.application.person.service.PersonService;